Account for the padding on our anonymous div when sizing.  Bug 388086, r+sr+a=dbaron